--- a/09_September/09.09.2024/index.html
+++ b/09_September/09.09.2024/index.html
@@ -10,7 +10,7 @@
       }
       div {
         background-color: yellow;
-        padding: 10px;
+        padding: 8px;
         border: blue solid;
         margin: 10px;
       }
@@ -20,44 +20,22 @@
       .bolded {
         color: white;
         background-color: gray;
-        border-radius: 8px;
+        border-radius: 4px;
+        padding: 2px;
+        width: fit-content;
       }
       span {
         color: black;
       }
-      .rounded {
-        border-radius: 10px;
-      }
-      .red {
-        background-color: red;
-        border: none;
-        padding: 0px;
-        height: 250px;
-      }
-      .small {
-        height: 25px;
-        width: 25px;
-        background-color: black;
-        color: white;
-        margin-left: 0;
-        border: none;
-      }
-      .left {
-        margin-left: 0;
-      }
-      .right {
-        margin-right: 0;
-        margin-left: auto;
-      }
-      .second {
-        display: inline-flex;
-      }
+
       .round {
         width: 50px;
         height: 50px;
         border-radius: 30px;
         padding: 0;
         margin: 0;
+        display: inline-block;
+        border: none;
       }
       .one {
         background-color: red;
@@ -68,26 +46,46 @@
       .three {
         background-color: green;
       }
-      .empty {
-        border: none;
-        width: 250px;
-      }
+
       .third {
         padding-left: 80px;
         padding-right: 80px;
       }
-      .middle {
-        height: 25px;
-        width: 50px;
+      .red {
+        background-color: red;
+        border: none;
+        padding: 0px;
+        height: 250px;
+      }
+      .small {
+        width: fit-content;
         background-color: black;
         color: white;
+        margin-left: 0;
         border: none;
+      }
+      /* .left {
+        margin-left: 0;
+      } */
+      .right {
+        margin-right: 0;
+        margin-left: auto;
+      }
+      .middle {
+        /* height: 25px;
+        width: 50px; */
+        background-color: black;
+        color: white;
         border-radius: 30px;
         margin-inline: auto;
         box-shadow: 10px 5px 5px white;
       }
       button {
         background-color: rgb(169, 98, 234);
+        border: none;
+      }
+      .rounded {
+        border-radius: 10px;
       }
     </style>
   </head>
@@ -102,13 +100,12 @@
       <div class="round one"></div>
       <div class="round two"></div>
       <div class="round three"></div>
-      <div class="empty"></div>
     </div>
     <div class="third">
       <div class="red">
         <div class="left small">left</div>
         <div class="right small">right</div>
-        <div class="middle">middle</div>
+        <div class="middle small">middle</div>
       </div>
     </div>
     <button>explore</button>
