finished ATM login without css

--- a/10_October/ATM/index.html
+++ b/10_October/ATM/index.html
@@ -26,6 +26,7 @@
         <input placeholder="XXXX" name="PINcodeInp" id="PINcodeInp" />
       </div>
       <button id="welcomingBtn">finish</button>
+      <button onclick="renderAddingNewCard()">reset</button>
     </div>
     <div class="choosing-credit-card hidden">
       <h1>please choose which credit card you want to do actions on</h1>
@@ -50,7 +51,7 @@
         onclick="renderAllCards()"
         type="button"
       >
-        add new card
+        choose different card
       </button>
     </form>
     <nav class="hidden">
