--- a/wether_api/index.html
+++ b/wether_api/index.html
@@ -12,6 +12,7 @@
       <h4 class="weather-description"></h4>
       <h4 class="min-max-temp"></h4>
     </header>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
